Add read-only table views for study.StudyDesign and study.StudyDesignVersion to the viscstudies schema